Split into client/service module with top level build

--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,13 @@
 	</parent>
 	<groupId>com.forsvarir</groupId>
 	<artifactId>file-utils</artifactId>
+	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>file-utils</name>
+	<modules>
+		<module>services</module>
+		<module>clients</module>
+	</modules>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -64,6 +69,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.0</version>
 			</plugin>
 		</plugins>
 	</build>
