--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -14,6 +14,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.forsvarir.common.utils</groupId>
+            <artifactId>common.utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
