--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <groupId>com.forsvarir.file.utils</groupId>
     <artifactId>clients</artifactId>
@@ -15,7 +21,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-<!--            https://github.com/forsvarir/common-utils-->
+            <!--            https://github.com/forsvarir/common-utils-->
             <groupId>com.forsvarir.common.utils</groupId>
             <artifactId>common.utils</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -23,6 +29,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
             <version>2.4.0</version>
         </dependency>
         <dependency>
