--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>services</module>
         <module>clients</module>
+        <module>common</module>
     </modules>
     <description>Demo project for Spring Boot</description>
 
